# python-pytest-testing-project-79

./: .flake8  Makefile  README.md  expect.html  pyproject.toml
.github/workflows/: python-app.yml
hexlet_code/: page_loader.py
tests/: test_page_loader.py
tests/file_fixtures/: application.css  html-with-files-downloaded.html  html-with-files.html  simple.html
