[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Artemy Khanov <artemy.khanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
requests-mock = "^1.11.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
